--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "buildprod": "ng build --configuration='production'",
+    "buildsi": "ng build --configuration='int'",
+    "builddvl": "ng build --configuration='dev'"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@types/file-saver": "^2.0.5",
+    "angular-oauth2-oidc": "^13.0.1",
     "file-saver": "^2.0.5",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.0",
